refactor: restructure Athena app with proper module organization
- Move schema files to modules/http-proxy/lib/ directory
- Update manifest to reference http_proxy module instead of web2
- Reorganize project structure for better modularity

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,8 @@ $RECYCLE.BIN/
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
 Cargo.lock
 wasm/integration-test/http-request/target
+
+# Athena build stuff
+*.hmod
+*.wasm
+*.happ
