--- a/hermes/apps/athena/modules/http-proxy/lib/manifest_module.json
+++ b/hermes/apps/athena/modules/http-proxy/lib/manifest_module.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://raw.githubusercontent.com/input-output-hk/hermes/main/hermes/schemas/hermes_module_manifest.schema.json",
-    "name": "web2",
+    "name": "http_proxy",
     "metadata": "metadata.json",
     "component": "http_proxy.wasm",
     "config": {
