--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -44,7 +44,7 @@ yamux = "=0.13.5"
 criterion = {version = "0.6.0", optional=true}
 
 cardano-chain-follower = { path = "../crates/cardano-chain-follower", version = "0.0.1" }
-hermes-ipfs = { version = "0.0.4", git = "https://github.com/input-output-hk/catalyst-libs.git", branch = "chore/hermes-ipfs-bump" }
+hermes-ipfs = { version = "0.0.4", git = "https://github.com/input-output-hk/catalyst-libs.git", branch = "main" }
 
 wasmtime = { version = "35.0.0", default-features = false, features = ["runtime", "cranelift", "component-model"] }
 rusty_ulid = "2.0.0"
