--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -31,40 +31,41 @@ path = "tests/integration/tests/mod.rs"
 
 [dependencies]
 # specific commit from the `catalyst` branch
+# Point to latest pallas when we eliminate the dependency on the old chain follower.
 pallas = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "709acb19c52c6b789279ecc4bc8793b5d8b5abe9", version = "0.25.0" }
 
 # HDF5 is consumed using a git tag, because the latest release is very old, but the code is much more advanced.
 hdf5 = { package = "hdf5-metno", version = "0.10.1", features = [ "static", "blosc", "blosc-zstd" ] }
 # needs to enable blosc compression functionality for hdf5 crate
-blosc-src = { version = "0.3.4", features = ["lz4", "zlib", "zstd"] }
+blosc-src = { version = "0.3.6", features = ["lz4", "zlib", "zstd"] }
 
 # fixes the dependency of libp2p of hermes-ipfs, because latest version uses MSRV higher than ours.
-yamux = "=0.13.5"
+#yamux = "=0.13.5"
 
-criterion = {version = "0.6.0", optional=true}
+criterion = {version = "0.7.0", optional=true}
 
 cardano-chain-follower = { path = "../crates/cardano-chain-follower", version = "0.0.1" }
-hermes-ipfs = { version = "0.0.4", git = "https://github.com/input-output-hk/catalyst-libs.git", branch = "main" }
+hermes-ipfs = { version = "0.0.5", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "hermes-ipfs/v0.0.5" }
 
 wasmtime = { version = "35.0.0", default-features = false, features = ["runtime", "cranelift", "component-model"] }
 rusty_ulid = "2.0.0"
-anyhow = "1.0.89"
+anyhow = "1.0.98"
 hex-literal = "1.0.0"
 thiserror = "2.0.12"
 hex = "0.4.3"
 tracing = {version="0.1.41", features = ["log"] }
-tracing-subscriber = { version = "0.3.18", features = ["fmt", "json", "time", "env-filter"] }
+tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "time", "env-filter"] }
 libtest-mimic = "0.8.1"
-crossbeam-queue = "0.3.11"
+crossbeam-queue = "0.3.12"
 bip39 = { version="2.1.0", features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "spanish" ] }
-iana-time-zone = "0.1.61"
-rand = "0.9.1"
-bip32 = "0.5.2"
+iana-time-zone = "0.1.63"
+rand = "0.9.2"
+bip32 = "0.5.3"
 ed25519-bip32 = "0.4.1"
 dashmap = "6.1.0"
-once_cell = "1.20.2"
-clap = "4.5.20"
-build-info = "0.0.40"
+once_cell = "1.21.3"
+clap = "4.5.42"
+build-info = "0.0.41"
 derive_more = "2.0.1"
 chrono = { version = "0.4.38", features = ["now"] }
 chrono-tz = "0.10.0"
@@ -99,7 +100,7 @@ reqwest = "0.12.22"
 url = "2.5.0"
 
 [build-dependencies]
-build-info-build = "0.0.40"
+build-info-build = "0.0.41"
 
 [dev-dependencies]
 serial_test = { version = "3.1.1", features = ["file_locks"] }
