--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -36,8 +36,8 @@ yamux = "=0.13.3"
 
 criterion = {version = "0.6.0", optional=true}
 
-cardano-blockchain-types = { version = "0.0.4", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "r20250724-01" }
-cardano-chain-follower = { version = "0.0.9", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "r20250724-01" }
+cardano-blockchain-types = { version = "0.0.5", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-blockchain-types-v0.0.5" }
+cardano-chain-follower = { version = "0.0.11", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-chain-follower-v0.0.11" }
 hermes-ipfs = { version = "0.0.3", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "v0.0.3" }
 
 wasmtime = { version = "33.0.0", default-features = false, features = ["runtime", "cranelift", "component-model"] }
