--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -3,7 +3,7 @@ name = "hermes"
 description = "The Hermes Node"
 keywords = ["cardano", "catalyst", "hermes"]
 categories = ["command-line-utilities"]
-version.workspace = true
+version = "0.0.5"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -31,82 +31,80 @@ path = "tests/integration/tests/mod.rs"
 
 [dependencies]
 # specific commit from the `catalyst` branch
+# Point to latest pallas when we eliminate the dependency on the old chain follower.
 pallas = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "709acb19c52c6b789279ecc4bc8793b5d8b5abe9", version = "0.25.0" }
+
+# Our custom crates
+hermes-ipfs = { version = "0.0.5", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "hermes-ipfs/v0.0.5" }
+cardano-chain-follower = { path = "../crates/cardano-chain-follower", version = "0.0.1" }
 
 # HDF5 is consumed using a git tag, because the latest release is very old, but the code is much more advanced.
 hdf5 = { package = "hdf5-metno", version = "0.10.1", features = [ "static", "blosc", "blosc-zstd" ] }
 # needs to enable blosc compression functionality for hdf5 crate
-blosc-src = { version = "0.3.4", features = ["lz4", "zlib", "zstd"] }
+blosc-src = { version = "0.3.6", features = ["lz4", "zlib", "zstd"] }
 
-# fixes the dependency of libp2p of hermes-ipfs, because latest version uses MSRV higher than ours.
-yamux = "=0.13.3"
-
-criterion = {version = "0.6.0", optional=true}
-
-cardano-chain-follower = { path = "../crates/cardano-chain-follower", version = "0.0.1" }
-hermes-ipfs = { version = "0.0.3", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "v0.0.3" }
-
-wasmtime = { version = "33.0.0", default-features = false, features = ["runtime", "cranelift", "component-model"] }
+criterion = {version = "0.7.0", optional=true}
+wasmtime = { version = "35.0.0", default-features = false, features = ["runtime", "cranelift", "component-model"] }
 rusty_ulid = "2.0.0"
-anyhow = "1.0.89"
+anyhow = "1.0.98"
 hex-literal = "1.0.0"
 thiserror = "2.0.12"
 hex = "0.4.3"
 tracing = {version="0.1.41", features = ["log"] }
-tracing-subscriber = { version = "0.3.18", features = ["fmt", "json", "time", "env-filter"] }
+tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "time", "env-filter"] }
 libtest-mimic = "0.8.1"
-crossbeam-queue = "0.3.11"
-bip39 = { version="2.1.0", features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "spanish" ] }
-iana-time-zone = "0.1.61"
-rand = "0.9.1"
-bip32 = "0.5.2"
+crossbeam-queue = "0.3.12"
+bip39 = { version="2.2.0", features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "spanish" ] }
+iana-time-zone = "0.1.63"
+rand = "0.9.2"
+bip32 = "0.5.3"
 ed25519-bip32 = "0.4.1"
 dashmap = "6.1.0"
-once_cell = "1.20.2"
-clap = "4.5.20"
-build-info = "0.0.40"
+once_cell = "1.21.3"
+clap = "4.5.42"
+build-info = "0.0.41"
 derive_more = "2.0.1"
-chrono = { version = "0.4.38", features = ["now"] }
-chrono-tz = "0.10.0"
+chrono = { version = "0.4.41", features = ["now"] }
+chrono-tz = "0.10.4"
 saffron = "0.1.0"
-tokio = { version = "1.45.1", features = ["macros", "sync", "rt-multi-thread", "rt", "net"] }
-libsqlite3-sys = {version="0.34.0", features = ["bundled"] }
-stringzilla = "3.9.8"
-temp-dir = "0.1.14"
-num_cpus = "1.16.0"
-console = "0.15.8"
-serde = { version="1.0.210", features = ["derive"] }
-serde_json = "1.0.128"
-jsonschema = "0.30.0"
+tokio = { version = "1.47.0", features = ["macros", "sync", "rt-multi-thread", "rt", "net"] }
+libsqlite3-sys = {version="0.35.0", features = ["bundled"] }
+stringzilla = "3.12.5"
+temp-dir = "0.1.16"
+num_cpus = "1.17.0"
+console = "0.16.0"
+serde = { version="1.0.219", features = ["derive"] }
+serde_json = "1.0.141"
+jsonschema = "0.32.0"
 hyper = { version = "1.6.0", features = ["full"] }
 http-body-util = "0.1.3"
-hyper-util = { version = "0.1.13", features = ["server-auto"] }
+hyper-util = { version = "0.1.16", features = ["server-auto"] }
 hmac = "0.12.1"
 pbkdf2 = "0.12.2"
-blake2b_simd = "1.0.2"
-sha2 = "0.10.8"
-ed25519-dalek = { version="2.1.1", features = ["pem"] }
+blake2b_simd = "1.0.3"
+sha2 = "0.10.9"
+ed25519-dalek = { version="2.2.0", features = ["pem"] }
 x509-cert = { version="0.2.5", features = ["pem"] }
 coset = "0.3.8"
 dirs = "6.0.0"
-regex = "1.11.0"
-rustls = { version = "0.23.28", default-features = false, features = ["ring"] }
-webpki-roots = "1.0.1"
+regex = "1.11.1"
+rustls = { version = "0.23.31", default-features = false, features = ["ring","brotli","zlib"] }
+webpki-roots = "1.0.2"
 tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring"] }
 usvg = "0.45.1"
 uuid = { version = "1.17.0", features = ["v4"] }
 reqwest = "0.12.22"
-url = "2.5.0"
+url = "2.5.4"
 
 [build-dependencies]
-build-info-build = "0.0.40"
+build-info-build = "0.0.41"
 
 [dev-dependencies]
-serial_test = { version = "3.1.1", features = ["file_locks"] }
+serial_test = { version = "3.2.0", features = ["file_locks"] }
 # An override with the "wat" feature added.
-wasmtime = { version = "33.0.0", default-features = false, features = ["runtime", "cranelift", "component-model", "wat"] }
+wasmtime = { version = "35.0.0", default-features = false, features = ["runtime", "cranelift", "component-model", "wat"] }
 httpmock = "0.7.0"
 
 [package.metadata.cargo-machete]
-# This is required for HDF5 and hermes-ipfs.
-ignored = ["blosc-src", "yamux"]
+# This is required for HDF5.
+ignored = ["blosc-src"]
