--- a/hermes/deny.toml
+++ b/hermes/deny.toml
@@ -58,6 +58,8 @@ allow-git = [
     "https://github.com/txpipe/kes",
     "https://github.com/txpipe/curve25519-dalek",
     "https://github.com/input-output-hk/mithril",
+    # Maintained fork of an archived crates-io version.
+    "https://github.com/dariusc93/rust-ipfs",
 ]
 
 [licenses]
@@ -81,6 +83,7 @@ allow = [
     "Zlib",
     "MIT-0",
     "CDLA-Permissive-2.0",
+    "OpenSSL",
 ]
 exceptions = [
     #{ allow = ["Zlib"], crate = "tinyvec" },
