--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -30,21 +30,18 @@ name = "integration"
 path = "tests/integration/tests/mod.rs"
 
 [dependencies]
-# specific commit from the `catalyst` branch
-# Point to latest pallas when we eliminate the dependency on the old chain follower.
-pallas = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "709acb19c52c6b789279ecc4bc8793b5d8b5abe9", version = "0.25.0" }
-
-# Our custom crates
+# Catalyst Internal Crates
 hermes-ipfs = { version = "0.0.5", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "hermes-ipfs/v0.0.5" }
-cardano-chain-follower = { path = "../crates/cardano-chain-follower", version = "0.0.1" }
+cardano-blockchain-types = { version = "0.0.5", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-blockchain-types-v0.0.5" }
+cardano-chain-follower = { version = "0.0.11", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-chain-follower-v0.0.11" }
 
 # HDF5 is consumed using a git tag, because the latest release is very old, but the code is much more advanced.
 hdf5 = { package = "hdf5-metno", version = "0.10.1", features = [ "static", "blosc", "blosc-zstd" ] }
 # needs to enable blosc compression functionality for hdf5 crate
 blosc-src = { version = "0.3.6", features = ["lz4", "zlib", "zstd"] }
 
-criterion = {version = "0.7.0", optional=true}
 wasmtime = { version = "35.0.0", default-features = false, features = ["runtime", "cranelift", "component-model"] }
+criterion = {version = "0.7.0", optional=true}
 rusty_ulid = "2.0.0"
 anyhow = "1.0.98"
 hex-literal = "1.0.0"
