--- a/hermes/.cargo/config.toml
+++ b/hermes/.cargo/config.toml
@@ -69,13 +69,13 @@ codegen-units = 16
 [alias]
 lint = "clippy --all-targets"
 lintfix = "clippy --all-targets --fix --allow-dirty"
-lint-vscode = "clippy --release --message-format=json-diagnostic-rendered-ansi --all-targets"
+lint-vscode = "clippy --message-format=json-diagnostic-rendered-ansi --all-targets"
 
 docs = "doc --release --no-deps --document-private-items --bins --lib --examples"
 # nightly docs build broken... when they are'nt we can enable these docs... --unit-graph --timings=html,json -Z unstable-options"
-testunit = "nextest run --bins --lib --tests --no-fail-fast -P ci"
-testcov = "llvm-cov nextest --bins --lib --tests --no-fail-fast -P ci"
-testdocs = "test --doc"
+testunit = "nextest run --release --bins --lib --tests --no-fail-fast -P ci"
+testcov = "llvm-cov nextest --release --bins --lib --tests --no-fail-fast -P ci"
+testdocs = "test --doc --release"
 
 # Rust formatting, MUST be run with +nightly
 fmtchk = "fmt -- --check -v --color=always"
