Update codeowners for hermes

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,7 @@
 /dashboard/ @minikin
 
-/hermes/ @stevenj @Mr-Leshiy @FelipeRosa @cong-or @saibatizoku @minikin
+/hermes/ @stevenj @cong-or @rafal-ch
+
+/wasm/ @stevenj @cong-or @rafal-ch @no30bit 
 
 .md  @stevenj @minikin
