--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -2,7 +2,8 @@
 resolver = "2"
 members = [
     "bin",
-    "bin/tests/integration/components/http_request_rte_01"
+    "bin/tests/integration/components/http_request_rte_01",
+    "bin/tests/integration/components/sleep_component",
 ]
 default-members = [
     "bin",
