--- a/hermes/.cargo/config.toml
+++ b/hermes/.cargo/config.toml
@@ -25,6 +25,10 @@ rustflags = [
     "-C", "target-feature=+crt-static"
 ]
 
+# Set sqlite mode to parallel
+[env]
+LIBSQLITE3_FLAGS = "-DSQLITE_THREADSAFE=2"
+
 [build]
 rustflags = []
 rustdocflags = []
