--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -59,21 +59,21 @@ bip32 = "0.5.3"
 ed25519-bip32 = "0.4.1"
 dashmap = "6.1.0"
 once_cell = "1.21.3"
-clap = "4.5.43"
+clap = "4.5.42"
 build-info = "0.0.41"
 derive_more = "2.0.1"
 chrono = { version = "0.4.41", features = ["now"] }
 chrono-tz = "0.10.4"
 saffron = "0.1.0"
-tokio = { version = "1.47.1", features = ["macros", "sync", "rt-multi-thread", "rt", "net"] }
+tokio = { version = "1.47.0", features = ["macros", "sync", "rt-multi-thread", "rt", "net"] }
 libsqlite3-sys = {version="0.35.0", features = ["bundled"] }
 stringzilla = "3.12.5"
 temp-dir = "0.1.16"
 num_cpus = "1.17.0"
 console = "0.16.0"
 serde = { version="1.0.219", features = ["derive"] }
-serde_json = "1.0.142"
-jsonschema = "0.32.1"
+serde_json = "1.0.141"
+jsonschema = "0.32.0"
 hyper = { version = "1.6.0", features = ["full"] }
 http-body-util = "0.1.3"
 hyper-util = { version = "0.1.16", features = ["server-auto"] }
@@ -94,6 +94,11 @@ uuid = { version = "1.17.0", features = ["v4"] }
 reqwest = "0.12.22"
 url = "2.5.4"
 num-traits = "0.2.19"
+traitreg = "0.3.0"
+orx-concurrent-vec = "3.7.0"
+rayon = "1.11.0"
+itertools = "0.14.0"
+keyed-lock = "0.2.3"
 
 [build-dependencies]
 build-info-build = "0.0.41"
