feat: enhance Flutter asset serving and HTTP routing security
- Fix host header parsing by stripping port numbers for proper routing
- Add comprehensive Flutter web asset serving with MIME type detection
- Implement security headers (COOP/COEP) for SharedArrayBuffer support
- Improve asset caching and fallback logic for navigation routes
- Add version configuration and manifest updates
- Disable HDF5 compression in tests for debugging

--- a/hermes/apps/athena/manifest_app.json
+++ b/hermes/apps/athena/manifest_app.json
@@ -1,5 +1,6 @@
 {
     "$schema": "https://raw.githubusercontent.com/input-output-hk/hermes/main/hermes/schemas/hermes_app_manifest.schema.json",
+    "name": "app",
     "icon": "icon.svg",
     "metadata": "metadata.json",
     "modules": [
@@ -7,5 +8,6 @@
             "package": "modules/http-proxy/lib/http_proxy.hmod",
             "name": "http_proxy"
         }
-    ]
+    ],
+    "www": "modules/http-proxy/lib/www"
 }
