--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,5 @@
-/dashboard/ @minikin
+* @stevenj @cong-or @rafal-ch @no30bit @bkioshm @aido-mth
 
-/hermes/ @stevenj @cong-or @rafal-ch
+/dashboard/ @minikin @stevenj
 
-/wasm/ @stevenj @cong-or @rafal-ch @no30bit 
-
-.md  @stevenj @minikin
+.md @stevenj @minikin
