feat(hermes): dynamic init constuctor fix. (#527)
* feat(hermes): New runtime extension initialization/finalization traits.

* fix(hermes): remove file made when debugging

* fix(hermes): spelling

* fix(hermes): dependencies

* fix(hermes): format

* Update hermes/bin/src/runtime_extensions/init/errors.rs

Co-authored-by: Artur Helmanau <artur.helmanau@innowise.com>

* fix(hermes): Update the runtime init errors and executor based on suggestions

* fix(hermes): Add TODO and comment to linked issue for making a key locked concurrent map.

* fix(hermes): bump wasmtime

* fix(hermes): recreated module id, instead of using the one we already created.

* fix(hermes): comments

* Update hermes/bin/src/runtime_extensions/init/errors.rs

Co-authored-by: bkioshn <35752733+bkioshn@users.noreply.github.com>

* Update hermes/bin/src/runtime_extensions/init/errors.rs

Co-authored-by: bkioshn <35752733+bkioshn@users.noreply.github.com>

* fix(hermes): ignore hermes target artifacts

* fix(hermes): bump earthfiles to latest cat-ci to fix build issues

* docs(hermes): Put commented out line in tun-athena showing how to enable debug level logs.

* fix(hermes): Error message now properly explains whats wrong.

* fix(hermes): put back missing constructor argument for traitreg traits

* fix(hermes): Fixup the app name inconsistencies and move app initialization to try and move it before modules

* fix(general): rust standard configs

* fix(hermes): add unit tests to detect improperly configured runtime extension initialization

* fix(general): cleanup CODEOWNERS for all team members

* fix(general): typo

* fix(general): spelling

---------

Co-authored-by: Artur Helmanau <artur.helmanau@innowise.com>
Co-authored-by: bkioshn <35752733+bkioshn@users.noreply.github.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,5 @@
-/dashboard/ @minikin
+* @stevenj @cong-or @rafal-ch @no30bit @bkioshn @aido-mth
 
-/hermes/ @stevenj @cong-or @rafal-ch
+/dashboard/ @minikin @stevenj
 
-/wasm/ @stevenj @cong-or @rafal-ch @no30bit 
-
-.md  @stevenj @minikin
+.md @stevenj @minikin
