--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -105,8 +105,8 @@ build-info-build = "0.0.41"
 
 [dev-dependencies]
 serial_test = { version = "3.2.0", features = ["file_locks"] }
-# An override with the "wat" feature added.
-wasmtime = { version = "36.0.2", default-features = false, features = ["runtime", "cranelift", "component-model", "wat"] }
+# An override with the "wat" and "addr2line" features added (debug purposes).
+wasmtime = { version = "36.0.2", default-features = false, features = ["runtime", "cranelift", "component-model", "wat", "addr2line"] }
 httpmock = "0.7.0"
 
 [package.metadata.cargo-machete]
