--- a/hermes/apps/athena/manifest_app.json
+++ b/hermes/apps/athena/manifest_app.json
@@ -1,13 +1,17 @@
 {
-    "$schema": "https://raw.githubusercontent.com/input-output-hk/hermes/main/hermes/schemas/hermes_app_manifest.schema.json",
-    "name": "app",
-    "icon": "icon.svg",
-    "metadata": "metadata.json",
-    "modules": [
-        {
-            "package": "modules/http-proxy/lib/http_proxy.hmod",
-            "name": "http_proxy"
-        }
-    ],
-    "www": "modules/http-proxy/lib/www"
+	"$schema": "https://raw.githubusercontent.com/input-output-hk/hermes/main/hermes/schemas/hermes_app_manifest.schema.json",
+	"name": "app",
+	"icon": "icon.svg",
+	"metadata": "metadata.json",
+	"modules": [
+		{
+			"package": "modules/http-proxy/lib/http_proxy.hmod",
+			"name": "http_proxy"
+		},
+		{
+			"package": "modules/rbac-registration/lib/rbac_registration.hmod",
+			"name": "rbac_registration"
+		}
+	],
+	"www": "modules/http-proxy/lib/www"
 }
