--- a/hermes/apps/athena/modules/rbac-registration/Cargo.toml
+++ b/hermes/apps/athena/modules/rbac-registration/Cargo.toml
@@ -10,6 +10,8 @@ crate-type = ["cdylib"]
 wit-bindgen = "0.43.0"
 anyhow = "1.0.98"
 serde_json = "1.0.142"
+strum = "0.27.2"
+strum_macros = "0.27.2"
 
 cardano-blockchain-types = { version = "0.0.6", git = "https://github.com/input-output-hk/catalyst-libs", tag = "cardano-blockchain-types/v0.0.6" }
 rbac-registration = { version = "0.0.9", git = "https://github.com/input-output-hk/catalyst-libs", tag = "rbac-registration/v0.0.9" }
