--- a/hermes/apps/athena/manifest_app.json
+++ b/hermes/apps/athena/manifest_app.json
@@ -9,8 +9,8 @@
 			"name": "http_proxy"
 		},
 		{
-			"package": "modules/rbac-registration/lib/rbac_registration.hmod",
-			"name": "rbac_registration"
+			"package": "modules/rbac-registration/lib/rbac_registration_indexer.hmod",
+			"name": "rbac_registration_indexer"
 		}
 	],
 	"www": "modules/http-proxy/lib/www"
