--- a/hermes/apps/athena/manifest_app.json
+++ b/hermes/apps/athena/manifest_app.json
@@ -27,6 +27,10 @@
 		{
 			"package": "modules/auth/lib/auth.hmod",
 			"name": "auth"
+		},
+		{
+			"package": "modules/doc-sync/lib/doc_sync.hmod",
+			"name": "doc_sync"
 		}
 	],
 	"www": "modules/http-proxy/lib/www"
