--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -113,6 +113,7 @@ serial_test = { version = "3.2.0", features = ["file_locks"] }
 wasmtime = { version = "38.0.3", default-features = false, features = ["runtime", "cranelift", "component-model", "wat", "addr2line"] }
 httpmock = "0.8.2"
 wasmtime-wasi = "38.0.3"
+test-case = "3.3.1"
 
 [package.metadata.cargo-machete]
 # This is required for HDF5.
