--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -62,7 +62,7 @@ once_cell = "1.21.3"
 clap = "4.5.46"
 ctrlc = "3.5.0"
 build-info = "0.0.42"
-derive_more = "2.0.1"
+derive_more = { version = "2.0.1", features = ["try_from"] }
 chrono = { version = "0.4.41", features = ["now"] }
 chrono-tz = "0.10.4"
 saffron = "0.1.0"
@@ -103,6 +103,10 @@ keyed-lock = "0.2.3"
 wasmprinter = "0.240.0"
 wat = "1.239.0"
 multihash = { version = "0.19.3", features = ["serde-codec"] }
+bytemuck = { version = "1.23.2", features = ["derive"] }
+
+# Pinned to the catalyst_types minicbor version.
+minicbor = { version = "=0.25.1", features = ["std", "derive"] }
 
 [build-dependencies]
 build-info-build = "0.0.42"
