--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -62,7 +62,7 @@ once_cell = "1.21.3"
 clap = "4.5.46"
 ctrlc = "3.5.0"
 build-info = "0.0.42"
-derive_more = { version = "2.0.1", features = ["try_from"] }
+derive_more = { version = "2.0.1", features = ["deref", "try_from"] }
 chrono = { version = "0.4.41", features = ["now"] }
 chrono-tz = "0.10.4"
 saffron = "0.1.0"
